# erptemplate

./: .dockerignore  .pre-commit-config.yaml  16.0.Dockerfile  17.0.Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
lib/oneerplib/: __init__.py  installer.py
