[tool.poetry]
name = "erptemplate"
version = "0.1.0"
description = "ERP Template"
authors = ["Rastvetaev Evgheny"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "5.3.1"
docker-compose = "^1.29.2"
plumbum = "^1.8.2"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
